--- a/DevBackend/package.json
+++ b/DevBackend/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
