--- a/DevBackend/package.json
+++ b/DevBackend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
     "multer": "^1.4.4",
+    "socket.io": "^4.4.1",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
